--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "bcrypt": "^3.0.3",
+    "jquery": "^3.1.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "react": "^15.4.2",
