--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "passport-local": "^1.0.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-awesome-modal": "^2.0.5",
     "react-icons": "^3.5.0",
-    "react-modal": "^3.8.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.1"
