--- a/package.json
+++ b/package.json
@@ -29,13 +29,15 @@
     "webpack": "^2.2.1"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bcrypt": "^3.0.3",
+    "form-data": "^2.3.3",
     "jquery": "^3.1.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2",
     "react-awesome-modal": "^2.0.5",
+    "react-dom": "^15.4.2",
     "react-icons": "^3.5.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
