--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.15.0",
     "jquery": "^3.1.1",
     "mongoose": "^4.9.6",
+    "multer": "^1.4.1",
     "react-awesome-modal": "^2.0.5",
     "request": "^2.81.0",
     "webpack": "^2.2.1"
@@ -31,8 +32,10 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bcrypt": "^3.0.3",
+    "ejs": "^2.6.1",
     "form-data": "^2.3.3",
     "jquery": "^3.1.1",
+    "multer": "^1.4.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "react": "^15.4.2",
