--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "react": "webpack -d --watch",
-    "server": "nodemon server/index.js rs"
+    "server": "nodemon server/index.js rs",
+    "seed": "node database/seeds/recordSeed.js"
   },
   "author": "Randy Thomas & Indalecio 'Andy' Del Real",
   "license": "ISC",
@@ -32,6 +33,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bcrypt": "^3.0.3",
+    "chart.js": "^2.8.0",
     "ejs": "^2.6.1",
     "form-data": "^2.3.3",
     "jquery": "^3.1.1",
@@ -40,6 +42,7 @@
     "passport-local": "^1.0.0",
     "react": "^15.4.2",
     "react-awesome-modal": "^2.0.5",
+    "react-chartjs-2": "^2.7.4",
     "react-dom": "^15.4.2",
     "react-icons": "^3.5.0",
     "react-router": "^4.3.1",
